--- a/charts/podiumd-monitoring-logging/values-gemeente.yaml
+++ b/charts/podiumd-monitoring-logging/values-gemeente.yaml
@@ -24,25 +24,7 @@ kubePrometheusStack:
       url: http://tempo.loki.svc.cluster.local:3100
       access: proxy
       version: 1
-    - name: Azure Monitor
-      type: grafana-azure-monitor-datasource
-      orgId: 1
-      typeLogoUrl: public/plugins/grafana-azure-monitor-datasource/img/logo.jpg
-      access: proxy
-      url: /api/datasources/proxy/2
-      isDefault: false
-      readOnly: false
-      editable: true
-      jsonData:
-        cloudName: azuremonitor
-        subscriptionId: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
-        tenantId: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
-        clientId: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
-        logAnalyticsDefaultWorkspace: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
-        azureLogAnalyticsSameAs: true
-        keepCookies: []
-      secureJsonData:
-        clientSecret: LOG_ANALYTICS_CLIENT_SECRET
+      
     admin:
       existingSecret: ""
       passwordKey: admin-password
@@ -135,363 +117,9 @@ kubePrometheusStack:
           target_label: __address__
         static_configs:
         - labels:
-            group: Dimpact
-            subgroup: Test
+            group: 
+            subgroup: 
           targets:
-          - https://test-podiumd-logs.dimpact.nl
-          - https://test-formulier.dimpact.nl
-          - https://test-objecten.dimpact.nl
-          - https://test-objecttypen.dimpact.nl
-          - https://test-notificaties.dimpact.nl
-          - https://test-mijn.dimpact.nl
-          - https://dtestmidoffice.dimpact.nl
-        - labels:
-            group: Dimpact
-            subgroup: Acceptatie
-          targets:
-          - https://acc-podiumd-logs.dimpact.nl
-          - https://acc-formulier.dimpact.nl
-          - https://acc-objecten.dimpact.nl
-          - https://acc-objecttypen.dimpact.nl
-          - https://acc-notificaties.dimpact.nl
-          - https://acc-mijn.dimpact.nl
-          - https://dacceptatieloket.dimpact.nl/loket
-        - labels:
-            group: Dimpact
-            subgroup: Productie
-          targets:
-          - https://dloket.dimpact.nl/loket
-        - labels:
-            group: Assen
-            subgroup: Test
-          targets:
-          - https://test-formulier.assen.nl
-          - https://test-objecten.assen.nl
-          - https://test-objecttypen.assen.nl
-          - https://test-notificaties.assen.nl
-          - https://test-mijn.assen.nl
-        - labels:
-            group: Assen
-            subgroup: Acceptatie
-          targets:
-          - https://acc-formulier.assen.nl
-          - https://acc-objecten.assen.nl
-          - https://acc-objecttypen.assen.nl
-          - https://acc-notificaties.assen.nl
-          - https://acc-mijn.assen.nl
-          - https://dacceptatieloket.assen.nl/loket/
-        - labels:
-            group: Assen
-            subgroup: Productie
-          targets:
-          - https://formulier.assen.nl
-          - https://objecten.assen.nl
-          - https://objecttypen.assen.nl
-          - https://notificaties.assen.nl
-          - https://mijn.assen.nl
-          - https://dloket.assen.nl/loket/
-        - labels:
-            group: Borger-Odoorn
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.borger-odoorn.nl/
-        - labels:
-            group: Borger-Odoorn
-            subgroup: Productie
-          targets:
-          - https://dloket.borger-odoorn.nl/
-        - labels:
-            group: Coevorden
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.coevorden.nl/loket/
-        - labels:
-            group: Coevorden
-            subgroup: Productie
-          targets:
-          - https://dloket.coevorden.nl/loket/
-        - labels:
-            group: Deventer
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.deventer.nl/loket/
-        - labels:
-            group: Deventer
-            subgroup: Productie
-          targets:
-          - https://dloket.deventer.nl/loket/
-        - labels:
-            group: Enschede
-            subgroup: Test
-          targets:
-          - https://test-formulier.enschede.nl
-          - https://test-objecten.enschede.nl
-          - https://test-objecttypen.enschede.nl
-          - https://test-notificaties.enschede.nl
-          - https://test-mijn.enschede.nl
-        - labels:
-            group: Enschede
-            subgroup: Acceptatie
-          targets:
-          - https://acc-formulier.enschede.nl
-          - https://acc-objecten.enschede.nl
-          - https://acc-objecttypen.enschede.nl
-          - https://acc-notificaties.enschede.nl
-          - https://acc-mijn.enschede.nl
-          - https://dacceptatieloket.enschede.nl/loket/
-        - labels:
-            group: Enschede
-            subgroup: Productie
-          targets:
-          - https://formulier.enschede.nl
-          - https://objecten.enschede.nl
-          - https://objecttypen.enschede.nl
-          - https://notificaties.enschede.nl
-          - https://dloket.enschede.nl/loket/
-        - labels:
-            group: Emmen
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.emmen.nl/loket/
-        - labels:
-            group: Emmen
-            subgroup: Productie
-          targets:
-          - https://dloket.emmen.nl/loket/
-        - labels:
-            group: Groningen
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.groningen.nl/loket/
-        - labels:
-            group: Groningen
-            subgroup: Productie
-          targets:
-          - https://dloket.groningen.nl/loket/
-        - labels:
-            group: Gemert-Bakel
-            subgroup: Test
-          targets:
-          - https://test-formulier.gemert-bakel.nl
-          - https://test-objecten.gemert-bakel.nl
-          - https://test-objecttypen.gemert-bakel.nl
-          - https://test-notificaties.gemert-bakel.nl
-          - https://test-mijn.gemert-bakel.nl
-        - labels:
-            group: Gemert-Bakel
-            subgroup: Acceptatie
-          targets:
-          - https://acc-formulier.gemert-bakel.nl
-          - https://acc-objecten.gemert-bakel.nl
-          - https://acc-objecttypen.gemert-bakel.nl
-          - https://acc-notificaties.gemert-bakel.nl
-          - https://acc-mijn.gemert-bakel.nl
-          - https://dacceptatieloket.gemert-bakel.nl/loket/
-        - labels:
-            group: Gemert-Bakel
-            subgroup: Productie
-          targets:
-          - https://formulier.gemert-bakel.nl
-          - https://objecten.gemert-bakel.nl
-          - https://objecttypen.gemert-bakel.nl
-          - https://notificaties.gemert-bakel.nl
-          - https://mijn.gemert-bakel.nl
-          - https://dloket.gemert-bakel.nl/loket/
-        - labels:
-            group: Kampen
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.kampen.nl/loket/
-        - labels:
-            group: Kampen
-            subgroup: Productie
-          targets:
-          - https://dloket.kampen.nl/loket/
-        - labels:
-            group: Laarbeek
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.laarbeek.nl/loket/
-        - labels:
-            group: Laarbeek
-            subgroup: Productie
-          targets:
-          - https://dloket.laarbeek.nl/loket/
-        - labels:
-            group: Maashorst
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.maashorst.nl/loket/
-        - labels:
-            group: Oldambt
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.gemeente-oldambt.nl/loket/
-        - labels:
-            group: Oldambt
-            subgroup: Productie
-          targets:
-          - https://dloket.gemeente-oldambt.nl/loket/
-        - labels:
-            group: Oldenzaal
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.oldenzaal.nl/loket/
-        - labels:
-            group: Oldenzaal
-            subgroup: Productie
-          targets:
-          - https://dloket.oldenzaal.nl/loket/
-        - labels:
-            group: Oost-Gelre
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.oostgelre.nl/loket/
-        - labels:
-            group: Oost-Gelre
-            subgroup: Productie
-          targets:
-          - https://dloket.oostgelre.nl/loket/
-        - labels:
-            group: Olst-Wijhe
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.olst-wijhe.nl/loket/
-        - labels:
-            group: Olst-Wijhe
-            subgroup: Productie
-          targets:
-          - https://dloket.olst-wijhe.nl/loket/
-        - labels:
-            group: Raalte
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.raalte.nl/loket/
-        - labels:
-            group: Raalte
-            subgroup: Productie
-          targets:
-          - https://dloket.raalte.nl/loket/
-        - labels:
-            group: Rotterdam
-            subgroup: Test
-          targets:
-          - https://test-formulier.rotterdam.nl
-          - https://test-objecten.rotterdam.nl
-          - https://test-objecttypen.rotterdam.nl
-          - https://test-notificaties.rotterdam.nl
-          - https://test-mijn.rotterdam.nl
-        - labels:
-            group: Rotterdam
-            subgroup: Acceptatie
-          targets:
-          - https://acc-formulier.rotterdam.nl
-          - https://acc-objecten.rotterdam.nl
-          - https://acc-objecttypen.rotterdam.nl
-          - https://acc-notificaties.rotterdam.nl
-          - https://acc-mijn.rotterdam.nl
-          - https://dacceptatieloket.rotterdam.nl/loket/
-        - labels:
-            group: Rotterdam
-            subgroup: Productie
-          targets:
-          - https://formulier.rotterdam.nl
-          - https://objecten.rotterdam.nl
-          - https://objecttypen.rotterdam.nl
-          - https://notificaties.rotterdam.nl
-          - https://mijn.rotterdam.nl
-          - https://dloket.rotterdam.nl/loket/
-        - labels:
-            group: Roermond
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.roermond.nl/loket/
-        - labels:
-            group: Roermond
-            subgroup: Productie
-          targets:
-          - https://dloket.roermond.nl/loket/
-        - labels:
-            group: Voorne aan Zee
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.voorneaanzee.nl/loket/
-        - labels:
-            group: Voorne aan Zee
-            subgroup: Productie
-          targets:
-          - https://dloket.voorneaanzee.nl/loket/
-        - labels:
-            group: Waterland
-            subgroup: Acceptatie
-          targets:
-          - https://dacceptatieloket.waterland.nl/loket/
-        - labels:
-            group: Waterland
-            subgroup: Productie
-          targets:
-          - https://dloket.waterland.nl/loket/
-        - labels:
-            group: Zwolle
-            subgroup: Test
-          targets:
-          - https://test-formulier.zwolle.nl
-          - https://test-objecten.zwolle.nl
-          - https://test-objecttypen.zwolle.nl
-          - https://test-notificaties.zwolle.nl
-          - https://test-mijn.zwolle.nl
-        - labels:
-            group: Zwolle
-            subgroup: Acceptatie
-          targets:
-          - https://acc-formulier.zwolle.nl
-          - https://acc-objecten.zwolle.nl
-          - https://acc-objecttypen.zwolle.nl
-          - https://acc-notificaties.zwolle.nl
-          - https://acc-mijn.zwolle.nl
-          - https://dacceptatieloket.zwolle.nl/loket/
-        - labels:
-            group: Zwolle
-            subgroup: Productie
-          targets:
-          - https://formulier.zwolle.nl
-          - https://objecten.zwolle.nl
-          - https://objecttypen.zwolle.nl
-          - https://notificaties.zwolle.nl
-          - https://preprod-mijn.zwolle.nl
-          - https://dloket.zwolle.nl/loket/
-        - labels:
-            group: PodiumD
-            subgroup: Lab
-          targets:
-          - https://grafana.ow.lab.dimpact.nl
-          - https://prometheus.ow.lab.dimpact.nl
-          - https://gzac-lab2.ow.lab.dimpact.nl
-          - https://objecten-lab2.ow.lab.dimpact.nl
-          - https://objecttypen-lab2.ow.lab.dimpact.nl
-          - https://open-forms-lab2.ow.lab.dimpact.nl
-          - https://open-notificaties-lab2.ow.lab.dimpact.n
-          - https://open-klant-lab2.ow.lab.dimpact.nl
-          - https://open-zaak-lab2.ow.lab.dimpact.nl
-          - https://zac-lab2.ow.lab.dimpact.nl
-          - https://kiss-lab1.ow.lab.dimpact.nl
-          - https://objecten-lab1.ow.lab.dimpact.nl
-          - https://objecttypen-lab1.ow.lab.dimpact.nl
-          - https://open-forms-lab1.ow.lab.dimpact.nl
-          - https://open-inwoner-lab1.ow.lab.dimpact.nl
-          - https://keycloak.ow.lab.dimpact.nl
-          - https://open-notificaties-lab1.ow.lab.dimpact.nl
-        - labels:
-            group: Services
-            subgroup: Grafana
-          targets:
-          - kube-prometheus-stack-alertmanager:9093
-          - kube-prometheus-stack-prometheus:9090
-          - kube-prometheus-stack-prometheus-node-exporter:9100
-          - kube-prometheus-stack-kube-state-metrics:8080
-          - prometheus-black-exporter-prometheus-blackbox-exporter:9115
-          - kube-prometheus-stack-grafana:80
-          - prometheus-operated:9090
 
 x509CertificateExporter:
   prometheusServiceMonitor:
