--- a/charts/kiss/templates/sync-smoelenboek-cron-job.yaml
+++ b/charts/kiss/templates/sync-smoelenboek-cron-job.yaml
@@ -1,12 +1,12 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: kiss-sync-medewerkers-cron-job
+  name: kiss-sync-smoelenboek-cron-job
   labels:
     {{- include "kiss.labels" . | nindent 4 }}
-    app.kubernetes.io/name: {{ include "kiss.name" . }}-sync-medewerkers-cron-job
+    app.kubernetes.io/name: {{ include "kiss.name" . }}-sync-smoelenboek-cron-job
 spec:
-  schedule: {{ .Values.sync.schedule.medewerkers | quote }}
+  schedule: {{ .Values.sync.schedule.smoelenboek | quote }}
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: {{ .Values.sync.successfulJobsHistoryLimit }}
   failedJobsHistoryLimit: {{ .Values.sync.failedJobsHistoryLimit }}
@@ -14,13 +14,13 @@ spec:
     metadata:
       labels:
         {{- include "kiss.labels" . | nindent 8 }}
-        app.kubernetes.io/name: {{ include "kiss.name" . }}-sync-medewerkers-cron-job
+        app.kubernetes.io/name: {{ include "kiss.name" . }}-sync-smoelenboek-cron-job
     spec:
       template:
         spec:
           restartPolicy: Never
           containers:
-            - name: sync-medewerkers
+            - name: sync-smoelenboek
               image: "{{ .Values.sync.image.repository }}:{{ .Values.sync.image.tag }}"
               imagePullPolicy: {{ .Values.sync.image.pullPolicy }}
               args:
