--- a/charts/podiumd-monitoring-logging/values-gemeente.yaml
+++ b/charts/podiumd-monitoring-logging/values-gemeente.yaml
@@ -180,6 +180,9 @@ loki:
   serviceMonitor:
     enabled: true
   
+  tableManager:
+    retention_period: 30
+  
   # Zero out replica counts of other deployment modes
   backend:
     replicas: 0
