--- a/charts/podiumd-monitoring-logging/values.yaml
+++ b/charts/podiumd-monitoring-logging/values.yaml
@@ -543,8 +543,6 @@ loki:
           index:
             prefix: loki_index_
             period: 24h
-      retention_config:
-        retention_period: 30d
     ingester:
       chunk_encoding: snappy
     tracing:
@@ -573,6 +571,9 @@ loki:
   # create prometheus operator monitoring resources  
   serviceMonitor:
     enabled: true
+  
+  tableManager:
+    retention_period: 30
   
   # Zero out replica counts of other deployment modes
   backend:
