--- a/charts/podiumd-monitoring-logging/values-gemeente.yaml
+++ b/charts/podiumd-monitoring-logging/values-gemeente.yaml
@@ -230,3 +230,10 @@ helmExporter:
   serviceMonitor:
   # Specifies whether a ServiceMonitor should be created
   create: true
+  
+tempo:  
+  persistence:
+    accessModes:
+    - ReadWriteOnce
+    enabled: true
+    size: 10Gi 
