- Open klant v1 en v2 toegevoegd aan podiumd Helm chart - Paar kleine aanpassingen in Keycloak ldap federatie

--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -166,13 +166,13 @@ data:
             connectionPooling:
               - true
             bindDn:
-              - cn=admin,dc=dimpact-lab,dc=org
+              - cn=admin,dc=dimpact,dc=org
             bindCredential:
               - admin
             editMode:
               - WRITABLE
             usersDn:
-              - ou=lab3,dc=dimpact-lab,dc=org
+              - ou=lab3,dc=dimpact,dc=org
             usernameLDAPAttribute:
               - cn
             rdnLDAPAttribute:
