--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -45,10 +45,19 @@ dependencies:
     repository: "@maykinmedia"
     condition: objecttypen.enabled
   - name: openklant
+    alias: openklantv1
+    version: ~1.3.2
+    # appVersion: 0.5-pre -> 1.0.0
+    repository: "@maykinmedia"
+    condition: openklantv1.enabled
+    tags:
+      - zaak
+  - name: openklant
+    alias: openklantv2
     version: ~1.3.2
     # appVersion: 0.5-pre -> 2.0.0
     repository: "@maykinmedia"
-    condition: openklant.enabled
+    condition: openklantv2.enabled
   - name: brpmock
     version: ~1.2.2
     repository: "@dimpact"
