--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -129,11 +129,13 @@ objecttypen:
   fullnameOverride: objecttypen
 
 openklant:
-  image:
-    tag: "2.0.0"
   configuration:
     oidcUrl: "http://openklant.podiumd.svc.cluster.local"
     oidcSecret: "<openklant>"
+
+openklantv1:
+  image:
+    tag: "1.0.0"
   settings:
     isHttps: false
     twoFactorAuthentication:
@@ -143,11 +145,30 @@ openklant:
     requests:
       cpu: 10m
       memory: 600Mi
-  nameOverride: openklant
-  fullnameOverride: openklant
+  nameOverride: openklantv1
+  fullnameOverride: openklantv1
   redis:
-    nameOverride: openklant-redis
-    fullnameOverride: openklant-redis
+    nameOverride: openklantv1-redis
+    fullnameOverride: openklantv1-redis
+
+openklantv2:
+  enabled: false
+  image:
+    tag: "2.0.0"
+  settings:
+    isHttps: false
+    twoFactorAuthentication:
+      forceOtpAdmin: false
+      patchAdmin: false
+  resources:
+    requests:
+      cpu: 10m
+      memory: 600Mi
+  nameOverride: openklantv2
+  fullnameOverride: openklantv2
+  redis:
+    nameOverride: openklantv2-redis
+    fullnameOverride: openklantv2-redis
 
 vngreferentielijsten:
   nameOverride: "vngreferentielijsten"
