--- a/charts/kiss/templates/adapter-config.yaml
+++ b/charts/kiss/templates/adapter-config.yaml
@@ -12,4 +12,4 @@ data:
   ESUITE_BASE_URL: {{ .Values.esuite.baseUrl | quote }}
   INTERNE_TAAK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlIntern .Values.objecttypen.interneTaakUUID | quote }}
   SMOELENBOEK_BASE_URL: {{ .Values.objecten.baseUrl | quote }}
-  SMOELENBOEK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlIntern .Values.objecttypen.medewerkerUUID | quote }}
+  SMOELENBOEK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlExtern .Values.objecttypen.medewerkerUUID | quote }}
