Document VNG Referentielijsten, BRP Mock en Open LDAP Helm Charts

--- a/charts/brpmock/templates/brpproxy-deployment.yaml
+++ b/charts/brpmock/templates/brpproxy-deployment.yaml
@@ -28,6 +28,8 @@ spec:
           ports:
             - name: http
               containerPort: 5000
+          resources:
+            {{- toYaml .Values.brpproxy.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
