--- a/charts/vngreferentielijsten/values.yaml
+++ b/charts/vngreferentielijsten/values.yaml
@@ -6,3 +6,8 @@ image:
   name: ghcr.io/infonl/vng-referentielijsten
   tag: "0.6.1"
   pullPolicy: IfNotPresent
+
+resources:
+  requests:
+    cpu: 10m
+    memory: 150Mi
