--- a/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
@@ -6,5 +6,4 @@ metadata:
     {{- include "podiumd.labels" . | nindent 4 }}
 data:
   KC_HOSTNAME_URL: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
-  KC_HOSTNAME_ADMIN_URL: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
-
+  KC_HOSTNAME_ADMIN_URL: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
