--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -7,20 +7,20 @@ tags:
 global:
   configuration:
     enabled: true
-    organization: "Example gemeente"
-    openzaakAutorisatiesApi: "https://openzaak.example.nl/autorisaties/api/v1/"
-    notificatiesApi: "https://opennotificaties.example.nl/api/v1/"
-    notificatiesOpenzaakClientId: "notificaties"
-    notificatiesOpenzaakSecret: "notificaties-secret"
-    openzaakNotificatiesClientId: "openzaak"
-    openzaakNotificatiesSecret: "openzaak-secret"
+    organization: Example gemeente
+    openzaakAutorisatiesApi: https://openzaak.example.nl/autorisaties/api/v1/
+    notificatiesApi: https://opennotificaties.example.nl/api/v1/
+    notificatiesOpenzaakClientId: notificaties
+    notificatiesOpenzaakSecret: notificaties-secret
+    openzaakNotificatiesClientId: openzaak
+    openzaakNotificatiesSecret: openzaak-secret
   imageRegistry: ""
 
 keycloak:
   config:
-    realmDisplayName: "PodiumD"
-    realmFrontendUrl: "https://keycloak.example.nl"
-    adminFrontendUrl: "https://keycloak-admin.example.nl"
+    realmDisplayName: PodiumD
+    realmFrontendUrl: https://keycloak.example.nl
+    adminFrontendUrl: https://keycloak-admin.example.nl
   auth:
     adminUser: admin
     adminPassword: ChangeMeNow
@@ -45,54 +45,96 @@ keycloak:
   extraEnvVarsCM: keycloak-extra-env-vars
 
 openldap:
-  nameOverride: "openldap"
-  fullnameOverride: "openldap"
+  nameOverride: openldap
+  fullnameOverride: openldap
+
+vngreferentielijsten:
+  nameOverride: vngreferentielijsten
+
+brpmock:
+  enabled: false
+  nameOverride: brpmock
 
 openzaak:
-  image:
-    tag: "1.12.3"
   configuration:
-    oidcUrl: "http://openzaak.podiumd.svc.cluster.local"
+    oidcUrl: https://openzaak.example.nl
     oidcSecret: "<openzaak>"
     initContainer:
       enabled: true
     cronjob:
       enabled: false
   settings:
+    allowedHosts: openzaak-nginx.podiumd.svc.cluster.local
+    database:
+      host: ""
+      name: ""
+      username: ""
+      password: ""
     isHttps: false
+  image:
+    tag: "1.12.3"
   resources:
     requests:
-      cpu: 100m
+      cpu: 10m
       memory: 400Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 400Mi
   nameOverride: openzaak
   fullnameOverride: openzaak
   flower:
     enabled: false
+  nginx:
+    resources:
+      requests:
+        cpu: 1m
+        memory: 10Mi
   redis:
     nameOverride: openzaak-redis
     fullnameOverride: openzaak-redis
 
 opennotificaties:
-  image:
-    tag: "1.6.0"
   configuration:
-    oidcUrl: "http://opennotificaties.podiumd.svc.cluster.local"
+    oidcUrl: https://opennotificaties.example.nl
     oidcSecret: "<opennotificaties>"
     initContainer:
       enabled: true
     cronjob:
       enabled: false
   settings:
+    allowedHosts: opennotificaties.podiumd.svc.cluster.local
+    maxRetries: 5
+    retryBackoff: 3
+    retryBackoffMax: 48
+    cleanOldNotifications:
+      enabled: true
+      daysRetained: 30
+      cronjob:
+        schedule: "0 0 * * *"
+        historyLimit: 1
     isHttps: false
+  image:
+    tag: "1.6.0"
   resources:
     requests:
       cpu: 10m
       memory: 200Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 400Mi
   nameOverride: opennotificaties
   fullnameOverride: opennotificaties
   flower:
     enabled: false
   rabbitmq:
+    resources:
+      requests:
+        cpu: 100m
+        memory: 200Mi
     nameOverride: opennotificaties-rabbitmq
     fullnameOverride: opennotificaties-rabbitmq
     auth:
@@ -104,18 +146,24 @@ opennotificaties:
     fullnameOverride: opennotificaties-redis
 
 objecten:
-  image:
-    tag: "2.3.1"
   configuration:
-    oidcUrl: "http://objecten.podiumd.svc.cluster.local"
+    oidcUrl: https://objecten.example.nl
     oidcSecret: "<objecten>"
   settings:
+    allowedHosts: objecten.podiumd.svc.cluster.local
     isHttps: false
     disable2fa: true
+  image:
+    tag: "2.3.1"
   resources:
     requests:
       cpu: 10m
       memory: 250Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 200Mi
   nameOverride: objecten
   fullnameOverride: objecten
   flower:
@@ -125,15 +173,16 @@ objecten:
     fullnameOverride: objecten-redis
 
 objecttypen:
-  image:
-    tag: "2.1.2"
   configuration:
-    oidcUrl: "http://objecttypen.podiumd.svc.cluster.local"
+    oidcUrl: https://objecttypen.example.nl
     oidcSecret: "<objecttypen>"
   settings:
+    allowedHosts: objecttypen.podiumd.svc.cluster.local
     twoFactorAuthentication:
       forceOtpAdmin: false
       patchAdmin: false
+  image:
+    tag: "2.1.2"
   resources:
     requests:
       cpu: 10m
@@ -143,19 +192,25 @@ objecttypen:
 
 openklantv1:
   configuration:
-    oidcUrl: "http://openklant.podiumd.svc.cluster.local"
-    oidcSecret: "<openklant>"
-  image:
-    tag: "1.0.0"
+    oidcUrl: https://openklantv1.example.nl
+    oidcSecret: "<openklantv1>"
   settings:
+    allowedHosts: openklantv1.podiumd.svc.cluster.local
     isHttps: false
     twoFactorAuthentication:
       forceOtpAdmin: false
       patchAdmin: false
+  image:
+    tag: "1.0.0"
   resources:
     requests:
       cpu: 10m
-      memory: 600Mi
+      memory: 300Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 200Mi
   nameOverride: openklantv1
   fullnameOverride: openklantv1
   redis:
@@ -165,61 +220,79 @@ openklantv1:
 openklantv2:
   enabled: false
   configuration:
-    oidcUrl: "http://openklant.podiumd.svc.cluster.local"
+    oidcUrl: https://openklantv2.example.nl
     oidcSecret: "<openklant>"
-  image:
-    tag: "2.0.0"
   settings:
+    allowedHosts: openklantv2.podiumd.svc.cluster.local
     isHttps: false
     twoFactorAuthentication:
       forceOtpAdmin: false
       patchAdmin: false
+  image:
+    tag: "2.0.0"
   resources:
     requests:
       cpu: 10m
-      memory: 600Mi
+      memory: 300Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 200Mi
   nameOverride: openklantv2
   fullnameOverride: openklantv2
   redis:
     nameOverride: openklantv2-redis
     fullnameOverride: openklantv2-redis
 
-vngreferentielijsten:
-  nameOverride: "vngreferentielijsten"
-
-brpmock:
-  enabled: false
-  nameOverride: "brpmock"
-
 openformulieren:
-  image:
-    tag: "2.6.7"
   configuration:
-    oidcUrl: "http://openformulieren.podiumd.svc.cluster.local"
+    oidcUrl: https://openformulieren.example.nl
     oidcSecret: "<openformulieren>"
   settings:
+    allowedHosts: openformulieren-nginx.podiumd.svc.cluster.local
     twoFactorAuthentication:
       forceOtpAdmin: false
       patchAdmin: false
+  persistence:
+    mediaMountSubpath: openformulieren/media
+    privateMediaMountSubpath: openformulieren/private_media
+  image:
+    tag: "2.6.7"
   resources:
     requests:
       cpu: 10m
       memory: 600Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 500Mi
   nameOverride: openformulieren
   fullnameOverride: openformulieren
   flower:
     enabled: false
   beat:
     enabled: false
+    resources:
+      requests:
+        cpu: 1m
+        memory: 150Mi
+  nginx:
+    resources:
+      requests:
+        cpu: 1m
+        memory: 10Mi
   redis:
     nameOverride: openformulieren-redis
     fullnameOverride: openformulieren-redis
 
 openinwoner:
   configuration:
-    oidcUrl: "http://openinwoner.podiumd.svc.cluster.local"
+    oidcUrl: https://openinwoner.example.nl
     oidcSecret: "<openinwoner>"
   settings:
+    allowedHosts: openinwoner-nginx.podiumd.svc.cluster.local
     isHttps: false
     twoFactorAuthentication:
       forceOtpAdmin: false
@@ -228,15 +301,31 @@ openinwoner:
     requests:
       cpu: 10m
       memory: 600Mi
+  worker:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 400Mi
   nameOverride: openinwoner
   fullnameOverride: openinwoner
+  nginx:
+    resources:
+      requests:
+        cpu: 1m
+        memory: 10Mi
   redis:
     nameOverride: openinwoner-redis
     fullnameOverride: openinwoner-redis
   elasticsearch:
     nameOverride: openinwoner-elasticsearch
     fullnameOverride: openinwoner-elasticsearch
-
+    master:
+      masterOnly: false
+    data:
+      replicaCount: 0
+    coordinating:
+      replicaCount: 0
+      
 kisselastic:
   kibanaDomain: kiss-kb-http.podiumd.svc.cluster.local:5601
   eck-operator:
@@ -245,22 +334,22 @@ kisselastic:
 
 kiss:
   configuration:
-    oidcUrl: "http://kiss.podiumd.svc.cluster.local"
+    oidcUrl: https://kiss.example.nl
     oidcSecret: "<kiss>"
 
 zac:
   configuration:
-    oidcUrl: "http://zac.podiumd.svc.cluster.local"
+    oidcUrl: https://zac.example.nl
     oidcSecret: "<zac>"
-  nameOverride: "zac"
-  fullnameOverride: "zac"
+  nameOverride: zac
+  fullnameOverride: zac
 
 clamav:
   image:
     tag: "1.3.1"
-  nameOverride: "clamav"
-  fullnameOverride: "clamav"
-  Resources:
+  nameOverride: clamav
+  fullnameOverride: clamav
+  resources:
     limits:
       cpu: 100m
       memory: 2Gi
@@ -350,14 +439,14 @@ serviceAccount:
 httpRequestJob:
   intellijHttpClient:
     image:
-      repository: "jetbrains/intellij-http-client"
+      repository: jetbrains/intellij-http-client
       tag: "242.14146.16"
   jwtCli:
     image:
-      repository: "bitnami/jwt-cli"
+      repository: bitnami/jwt-cli
       tag: "6.1.0"
   alpine:
     image:
-      repository: "alpine"
+      repository: alpine
       tag: "3.20"
   nodeSelector: {}
