--- a/charts/kiss/templates/frontend-secret.yaml
+++ b/charts/kiss/templates/frontend-secret.yaml
@@ -12,6 +12,12 @@ stringData:
   CONTACTMOMENTEN_API_KEY: {{ .Values.adapter.secret | quote }}
   ELASTIC_PASSWORD: {{ .Values.elastic.password | quote }}
   ELASTIC_USERNAME: {{ .Values.elastic.username | quote }}
+  {{- if .Values.email.username }}
+  EMAIL_USERNAME: {{ .Values.email.username | quote }}
+  {{- end }}
+  {{- if .Values.email.password }}
+  EMAIL_PASSWORD: {{ .Values.email.password | quote }}
+  {{- end }}
   ENTERPRISE_SEARCH_PRIVATE_API_KEY: {{ .Values.enterpriseSearch.privateApikey | quote }}
   ENTERPRISE_SEARCH_PUBLIC_API_KEY: {{ .Values.enterpriseSearch.publicApikey | quote }}
   HAAL_CENTRAAL_API_KEY: {{ .Values.brp.apiKey | quote }}
