--- a/charts/kiss/templates/frontend-config.yaml
+++ b/charts/kiss/templates/frontend-config.yaml
@@ -9,14 +9,14 @@ data:
   AFDELINGEN_BASE_URL: {{ .Values.objecten.baseUrl | quote }}
   AFDELINGEN_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlExtern .Values.objecttypen.afdelingUUID | quote }}
   CONTACTMOMENTEN_BASE_URL: {{ .Values.adapter.baseUrl | quote }}
-  ELASTIC_BASE_URL: {{ .Values.elastic.baseUrl | quote }}
+  ELASTIC_BASE_URL: {{ default (printf "https://kiss-es-http.%s.svc.cluster.local:9200" .Release.Namespace) .Values.elastic.baseUrl | quote }}
   {{- if .Values.email.host }}
   EMAIL_HOST: {{ .Values.email.host | quote }}
   {{- end }}
   {{- if .Values.email.port }}
   EMAIL_PORT:  {{ .Values.email.port }}
   {{- end }}
-  ENTERPRISE_SEARCH_BASE_URL: {{ .Values.enterpriseSearch.baseUrl | quote }}
+  ENTERPRISE_SEARCH_BASE_URL: {{ default (printf "https://kiss-ent-http.%s.svc.cluster.local:3002" .Release.Namespace) .Values.enterpriseSearch.baseUrl | quote }}
   {{- if .Values.email.enableSSL }}
   EMAIL_ENABLE_SSL: {{ .Values.email.enableSSL }}
   {{- end }}
