--- a/charts/kiss/templates/sync-config.yaml
+++ b/charts/kiss/templates/sync-config.yaml
@@ -6,8 +6,8 @@ metadata:
     {{- include "kiss.labels" . | nindent 4 }}
     app.kubernetes.io/name: {{ include "kiss.name" . }}-sync-config
 data:
-  ELASTIC_BASE_URL: {{ .Values.elastic.baseUrl | quote }}
-  ENTERPRISE_SEARCH_BASE_URL: {{ .Values.enterpriseSearch.baseUrl | quote }}
+  ELASTIC_BASE_URL: {{ default (printf "https://kiss-es-http.%s.svc.cluster.local:9200" .Release.Namespace) .Values.elastic.baseUrl | quote }}
+  ENTERPRISE_SEARCH_BASE_URL: {{ default (printf "https://kiss-ent-http.%s.svc.cluster.local:3002" .Release.Namespace) .Values.enterpriseSearch.baseUrl | quote }}
   ENTERPRISE_SEARCH_ENGINE: {{ .Values.enterpriseSearch.engine | quote }}
   MEDEWERKER_OBJECTEN_BASE_URL: {{ .Values.adapter.baseUrl | quote }}
   MEDEWERKER_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.objecttypen.baseUrlExtern .Values.objecttypen.medewerkerUUID | quote }}
